[package]
name = "scanrs"
version = "0.1.0"
authors = ["Omar Jair Purata Funes <omarpurataf@gmail.com>"]
edition = "2018"
description = "A simple Rust Library to handle user input in an easy way."
license = "GPL-2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
