[package]
name = "scanrs"
version = "0.2.0"
authors = ["Omar Jair Purata Funes <omarpurataf@gmail.com>"]
edition = "2018"
description = "A simple Rust Library to handle user input in an easy way."
homepage = "https://github.com/VentGrey/scanrs"
repository = "https://github.com/VentGrey/scanrs"
readme = "README.md"
license = "GPL-2.0-only"

keywords = [
         "input",
         "terminal",
         "stdin",
         "scanf",
         "gets"
]

categoires = [
           "command-line-interface",
           "text-input",
           "command-line-utilities"
]

[lib]
name = "scanrs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
